[package]
name = "iris-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.5", features = [
  "unproven",
] }
mpu6050 = "0.1.6"
panic-halt = "0.2.0"
rp2040-boot2 = "0.3.0"
rp2040-flash = { path = "rp2040-flash" }
rp2040-hal = "0.10.2"
